--- a/index.html
+++ b/index.html
@@ -2,19 +2,100 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSPCraft</title>
     <style>
-        body {
-            background-color: #f0f0f0; /* Light gray background */
+        body, html {
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background-color: #1a1a1a;
+        }
+        canvas {
+            display: block;
         }
     </style>
 </head>
 <body>
-    <p>Welcome to the DSPCraft webpage!</p>
+    <canvas id="waveCanvas"></canvas>
+
+    <script>
+        const canvas = document.getElementById('waveCanvas');
+        const ctx = canvas.getContext('2d');
+
+        const waves = [
+            { phase: 0, speed: 0.03, amplitude: 80, color: 'rgba(52, 152, 219, 0.3)' },
+            { phase: 2, speed: 0.04, amplitude: 100, color: 'rgba(46, 204, 113, 0.3)' },
+            { phase: 4, speed: 0.02, amplitude: 120, color: 'rgba(155, 89, 182, 0.3)' },
+            { phase: 6, speed: 0.05, amplitude: 90, color: 'rgba(241, 196, 15, 0.3)' }
+        ];
+
+        const logo = new Image();
+        logo.src = 'resources/logo.png';
+
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        }
+
+        function drawWaves() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            waves.forEach(wave => {
+                ctx.beginPath();
+                ctx.moveTo(0, canvas.height / 2);
+
+                for (let x = 0; x < canvas.width; x++) {
+                    let y = Math.sin(x * 0.015 + wave.phase) * wave.amplitude + canvas.height * 0.5;
+                    ctx.lineTo(x, y);
+                }
+
+                ctx.strokeStyle = wave.color;
+                ctx.lineWidth = 3;
+                ctx.stroke();
+
+                wave.phase += wave.speed;
+            });
+
+            drawLogo();
+
+            requestAnimationFrame(drawWaves);
+        }
+
+        function drawLogo() {
+            if (logo.complete) {
+                const logoSize = Math.min(canvas.width, canvas.height) * 1;
+                const scale = logoSize / Math.max(logo.width, logo.height);
+                const logoWidth = logo.width * scale;
+                const logoHeight = logo.height * scale;
+                const x = canvas.width / 2;
+                const y = canvas.height / 2;
+
+                ctx.save();
+                ctx.translate(x, y);
+
+                // Draw semi-transparent background
+                const bgRadius = Math.max(logoWidth, logoHeight) / 2;
+                ctx.beginPath();
+                ctx.arc(0, 0, bgRadius, 0, Math.PI * 2);
+                ctx.fillStyle = 'rgba(255, 255, 255, 0.1)'; // Semi-transparent white
+                ctx.fill();
+
+                // Draw logo
+                ctx.drawImage(logo, -logoWidth / 2, -logoHeight / 2, logoWidth, logoHeight);
+
+                ctx.restore();
+            }
+        }
+
+        logo.onload = function() {
+            drawWaves(); // Start the animation once the logo is loaded
+        };
+
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
+    </script>
 </body>
+</html>
